--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,11 +7,14 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
+            "name": "Launch via NPM",
+            "runtimeExecutable": "${env:NVM_BIN}/npm", //change this to your npm path
+            "runtimeArgs": [
+                "run-script",
+                "--inspect-brk=9229",
+                "start",
             ],
-            "program": "${workspaceFolder}/src/index.js"
+             "port": 9229
         }
     ]
 }
