--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-    "name": "obsidian",
-    "version": "0.1.2",
-    "description": "",
-    "main": "./src/index.js",
-    "scripts": {
-      "start": "node ./src/index.js"
-    },
-    "author": "Felix Moenckemeyer [Senseering Gmbh]",
-    "license": "MIT"
+  "name": "obsidian",
+  "version": "0.1.2",
+  "description": "",
+  "main": "./src/index.js",
+  "scripts": {
+    "start": "node ./src/index.js -p test audit hello bello",
+    "test": "mocha --timeout 15000"
+  },
+  "author": "Felix Moenckemeyer [Senseering Gmbh]",
+  "license": "MIT",
+  "devDependencies": {
+    "mocha": "^8.2.1"
+  },
+  "dependencies": {
+    "commander": "^7.0.0"
   }
-  
+}
