added nats as communication layer

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mocha": "^8.2.1"
   },
   "dependencies": {
-    "commander": "^7.0.0"
+    "commander": "^7.0.0",
+    "nats": "^2.0.0"
   }
 }
